# QuestionGenerator

./: .gitignore  CMakeLists.txt  README.md  answer.txt  default.toml  getoutput.cpp  getoutput.out  list_config.json  out.txt  print_out.cpp  print_out.out  question_config.json  random_config.toml  str_config.json  target.py  template.json
dst/: target-0.py  target-1.py  target-10.py  target-11.py  target-12.py  target-13.py  target-14.py  target-15.py  target-16.py  target-17.py  target-18.py  target-19.py  target-2.py  target-20.py  target-21.py  target-22.py  target-23.py  target-24.py  target-25.py  target-26.py  target-27.py  target-28.py  target-29.py  target-3.py  target-4.py  target-5.py  target-6.py  target-7.py  target-8.py  target-9.py  target.py
mod_conf/: example.json  example.py
src/: a.txt  ast_transform.py  distractor_gen.py  expr.py  generator.py  main.cpp  main.py  materialize.py  question_gen.py  question_mod.py  statement.py  util.py
src/context/: condition.h  context.cpp  context.h  scope.cpp
src/expression/: assign_expr.cpp  assign_expr.h  comp_expr.cpp  comp_expr.h  decl_expr.cpp  decl_expr.h  expression.cpp  expression.h  for_expr.cpp  for_expr.h  func_expr.cpp  func_expr.h  if_expr.cpp  if_expr.h  variable.h  while_expr.cpp  while_expr.h
src/generator/: code_gen.cpp  code_gen.h  context_gen.cpp  (+3 more)
template_conf/: ex1.json  ex10.json  ex11.json  ex2.json  ex3.json  ex4.json  ex5.json  ex6.json  ex7.json  ex8.json  list_config.json  num_list_config.json  str_config.json
test/: autotest.py  code.txt  example.json  result.txt  test.py
(+1 files in other folders)
